// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "workflow.proto";
import "forge_carbide.proto";
import "machine_discovery_carbide.proto";

option go_package = "github.com/nvidia/bare-metal-manager-rest/workflow-schema/proto";

package workflows.v1.machine;

message MachineInfo {
  forge.Machine machine = 1;
  machine_discovery.DiscoveryInfo discovery_info = 2;
}

message DpuMachine {
  forge.Machine machine = 1;
  forge.ManagedHostNetworkConfigResponse dpu_network_config = 2;
}

message MachineInventory {
  // List of Machines
  repeated MachineInfo machines = 1;
  // Reported timestamp of machine inventory
  google.protobuf.Timestamp timestamp = 2;
  // Status of Inventory
  InventoryStatus inventory_status = 3;
  // Status message regarding inventory collection, if any
  string status_msg = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
