// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

option go_package = "github.com/nvidia/carbide-rest/workflow-schema/proto";

import "workflow.proto";
import "forge_carbide.proto";
import "google/protobuf/timestamp.proto";

// CreateSSHKeyGroupRequest - request parameters of SSHKeyGroup creation
message CreateSSHKeyGroupRequest {
  // id of the tenant org attached to this keyset
  string tenant_organization_id = 1;
  // the id of the key, provided by the tenant.  Must be unique within the
  // tenant's organization.
  string keyset_id = 2;
  // version of the keyset
  string version = 3;
  // list of public keys associated with the tenant org
  repeated forge.TenantPublicKey public_keys = 4;
  optional WorkflowOptions options = 5;
}

// UpdateSSHKeyGroupRequest - request parameters to update SSHKeyGroup
message UpdateSSHKeyGroupRequest {
  // id of the tenant org attached to this keyset
  string tenant_organization_id = 1;
  // the id of the key, provided by the tenant.  Must be unique within the
  // tenant's organization.
  string keyset_id = 2;
  // version of the keyset
  string version = 3;
  // list of public keys associated with the tenant org
  repeated forge.TenantPublicKey public_keys = 4;
  // optional version string to check before updating
  optional string if_version_match = 5;
  optional WorkflowOptions options = 6;
}

// DeleteSSHKeyGroupRequest - request parameters to delete SSHKeyGroup
message DeleteSSHKeyGroupRequest {
  // id of the tenant org attached to this keyset
  string tenant_organization_id = 1;
  // the id of the key, provided by the tenant.  Must be unique within the
  // tenant's organization.
  string keyset_id = 2;
  optional WorkflowOptions options = 3;
}

// GetSSHKeyGroup - request to get an SSHKeyGroup
// ListSSHKeyGroup - request to list the existing SSHKeyGroup
message GetSSHKeyGroup {
  // id of the tenant org attached to this keyset
  string tenant_organization_id = 1;
  // the id of the key, provided by the tenant.  Must be unique within the
  // tenant's organization.
  string keyset_id = 2;
  // request key data
  bool include_key_data = 3;
  optional WorkflowOptions options = 4;
}

// SSHKeyGroupInfo - response for SSHKeyGroup create/update/delete request
message SSHKeyGroupInfo {
  WorkflowStatus status = 1;
  ObjectStatus object_status = 2;
  string status_msg = 3;
  forge.TenantKeyset tenant_keyset = 4;
}

// GetSSHKeyGroupResponse - response for SSHKeyGroup Get queries
message GetSSHKeyGroupResponse {
  WorkflowStatus status = 1;
  string status_msg = 2;
  forge.TenantKeySetList list = 3;
  TransactionID transaction_id = 4;
}

// SSHKeyGroupInventory - inventory info of all SSHKeyGroups on Site collected
// periodically
message SSHKeyGroupInventory {
  // List of SSH keysets
  repeated forge.TenantKeyset tenant_keysets = 1;
  // Reported timestamp of SSH keyset inventory
  google.protobuf.Timestamp timestamp = 2;
  // Status of Inventory
  InventoryStatus inventory_status = 3;
  string status_msg = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
